<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addStory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/preview_image"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/choose_image"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/add_gallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintTop_toBottomOf="@id/choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_camera"
            />

        <Button
            android:id="@+id/add_camera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintTop_toBottomOf="@id/choose"
            app:layout_constraintStart_toEndOf="@id/add_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autofillHints="no"
            android:background="@drawable/bg_edit_text"
            android:gravity="start|top"
            android:hint="@string/desc"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="#888888"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/add_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/upload_story"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>